# squad_connect

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: lib.rs
src/client/: mod.rs  squad_connect.rs  squard_connect.rs
src/service/: dtos.rs  mod.rs  services.rs  types.rs
