[package]
name = "squad_connect"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
fastcrypto = "0.1.8"
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
hex = "0.4.3"
jsonwebtoken = "9.3.1"
jwt-simple = {version ="0.12.12", default-features=false, features = [ "pure-rust" ]}
log = "0.4.27"
rand = "0.9.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
thiserror = "2.0.12"
tokio = "1.45.0"
url = "2.5.4"
uuid = {version="1.16.0", features = ["serde", "v4"]}

